<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Domodroid</string>
    <string name="button1">Synchronize</string>
    <string name="button2">Network</string>
    <string name="button4">About</string>
    <string name="option">Option</string>
    <string name="bt_prev">Prev.</string>
    <string name="bt_next">Next</string>
    <string name="bt_year">Last year</string>
    <string name="bt_month">Last month</string>
    <string name="bt_week">Last week</string>
    <string name="bt_day">Last day</string>
    <string name="Ok">OK</string>
    <string name="help_Title">Domodroid</string>
    <string name="help_Text1">Domodroid free Android application under GNU GPLv3 Licence and developed by Pierre Lainé\nModified by Dominique DAMBRAIN</string>
    <string name="help_Text2">Dim the lights, get information\'s about the inside temperature or the outside humidity, all with a single tap on your Android device. Requires a home automation system and a Domogik server. Domodroid offers you control of your Domogik home automation system with a large variety of devices supported</string>
    <string name="help_Text3">Domogik Project : http://www.domogik.org/</string>
    <string name="help_Text4">Domodroid documentation is available at:\nhttp://domodroid.readthedocs.org/</string>
    <string name="help_Text5">Contacts by mailing list :\ndomogik-developers@lists.labs.libre-entreprise.org</string>
    <string name="help_Text6">Follow-us on twitter :\nhttps://twitter.com/domogik</string>
    <string name="help_Text7">https://twitter.com/newdomodroid</string>
    <string name="splash_title">Welcome to Domodroid 1.3 !</string>
    <string name="home_splash">This new version of Domodroid contains lot of new features and improvements that have not been tested on all kind of Android devices. If anything goes wrong, you can contact dev at the following address: http://wiki.domogik.org/Contact+and+support .</string>
    <string name="home_splash2">Please delete the Domodroid cache data from the \"Application Settings\" panel before using this new version.</string>
    <string name="reload_title">An existing backup of settings exists !</string>
    <string name="home_reload">Click \"Yes\" if you wish to reload it,\nor    \"No\" to start with a new setting\n        WARNING : maps will be lost  !</string>
    <string name="reloadOK">Yes</string>
    <string name="reloadNO">No</string>
    <string name="warning">Warning !</string>
    <string name="not_sync">Domodroid isn\'t synchronized with a server !</string>
    <string name="syncing">Synchronization</string>
    <string name="home_button1">- Menu -</string>
    <string name="home_button2">Options</string>
    <string name="home_button3">Synchronize</string>
    <string name="home_button4">About</string>
    <string name="map_button1">Add Widget</string>
    <string name="map_button2">Remove Widget</string>
    <string name="map_button2b">Remove all Widgets</string>
    <string name="map_button2c">Move Widgets</string>
    <string name="map_nothing">No Map Loaded, press \"Help\"</string>
    <string name="map_button3">Help</string>
    <string name="map_help_text">A folder called \"domodroid\" has been created at the root of the external storage directory (or internal for some devices). Map must be put in that folder using the PNG format or SVG format created from Illustrator (basic shapes supported). </string>
    <string name="map_move_text1">Select your widget, it will disappear. Then tap where you want to put it again. </string>
    <string name="map_move_text2">Select Widget and replace it.</string>
    <string name="map_moveTitle">Move a widget</string>
    <string name="map_select">Select widget</string>
    <string name="map_change">Change Map</string>
    <string name="map_zoom">Zoom Map</string>
    <string name="map_drag">Drag Map</string>
    <string name="map_select_file">Select File</string>
    <string name="map_add_file_ok">New File Add</string>
    <string name="map_add_file_nok">Error adding this file</string>
    <string name="map_add_file_type_nok">File type not supported</string>
    <string name="Rename_file_title">Rename you file</string>
    <string name="Rename_file_message">Choose a new name for this file.\nNot required.</string>
    <string name="Rename_file_OK">Yes</string>
    <string name="Rename_file_NO">No</string>
    <string name="delete_map_title">Delete a map !</string>
    <string name="delete_map__message">Click \"Yes\" if you wish to delete this map,\nor    \"No\" \n        WARNING : all her mini-widgets will be lost  !</string>
    <string name="delete_map__OK">Yes</string>
    <string name="delete_map__NO">No</string>
    <string name="network_Title">- Options -</string>
    <string name="network_Text10">Graphic Period:</string>
    <string name="network_Text11">1 Day(s)</string>
    <string name="network_Text11a"> Day(s)</string>
    <string name="from">From : </string>
    <string name="to">    to : </string>
    <string name="Sync">Sync</string>
    <string name="Exit_Program">Exit Program</string>
    <string name="Rename_title">Rename</string>
    <string name="Rename_message">Set the text to be displayed.\nIt will change the description of the device in Domogik 0.5.</string>
    <string name="Delete_feature_title">Delete</string>
    <string name="Delete_feature_message">Delete this feature.\nThis information will be lost if you make a new sync.</string>
    <string name="New_ROOM_title">Create a Room</string>
    <string name="New_ROOM_message">Set the name of the new room.</string>
    <string name="Wich_ROOM_message">Select a Room</string>
    <string name="New_AREA_title">Create an Area</string>
    <string name="New_AREA_message">Set the name of the new area.</string>
    <string name="Wich_AREA_message">Select an Area</string>
    <string name="Add_widget_title">Select a Widget</string>
    <string name="debug_settings">Debug configuration</string>
    <string name="debug_explain">This screen allow debugging configuration</string>
    <string name="debug_log_debug">Debug</string>
    <string name="debug_log_debug_on">Debug log on</string>
    <string name="debug_log_debug_off">Debug log off</string>
    <string name="debug_log_error">Error</string>
    <string name="debug_log_error_on">Error log on</string>
    <string name="debug_log_error_off">Error log off</string>
    <string name="debug_log_info">Info</string>
    <string name="debug_log_info_on">Info log on</string>
    <string name="debug_log_info_off">Info log off</string>
    <string name="debug_log_verbose">Verbose</string>
    <string name="debug_log_verbose_on">Verbose log on</string>
    <string name="debug_log_verbose_off">Verbose log off</string>
    <string name="debug_log_warning">Warning</string>
    <string name="debug_log_warning_on">Warning log on</string>
    <string name="debug_log_warning_off">Warning log off</string>
    <string name="debug_system">Log to system (Catlog)</string>
    <string name="debug_system_on">Catlog on</string>
    <string name="debug_system_off">Catlog off</string>
    <string name="debug_screen">Log to screen</string>
    <string name="debug_screen_on">Screen logging on</string>
    <string name="debug_screen_off">Screen logging off</string>
    <string name="debug_file">Log to text file</string>
    <string name="debug_file_on">Logging in text file</string>
    <string name="debug_file_off">No logging to file</string>
    <string name="debug_dirpath">Target directory for text file</string>
    <string name="debug_filename">Log text filename</string>
    <string name="network_Text18">Dev:</string>
    <string name="map_settings">Map configuration</string>
    <string name="map_explain">This screen allow map view configuration</string>
    <string name="map_option_hide">Hide:</string>
    <string name="map_option_hide_on">Hide text in map</string>
    <string name="map_option_hide_off">Show text in map</string>
    <string name="map_option_size">300 px</string>
    <string name="map_option_menu_disable">Disallow editing map</string>
    <string name="map_option_menu_disable_on">Menu not available in map</string>
    <string name="map_option_menu_disable_off">Menu available in map</string>
    <string name="map_autozoom">Zoom auto in map mode:</string>
    <string name="map_autozoom_on">Image set to screen size</string>
    <string name="map_autozoom_off">Image set to normal size</string>
    <string name="OPTION_server_settings">Server configuration</string>
    <string name="OPTION_server_explain">This screen allow server configuration</string>
    <string name="OPTION_server_IP">Domogik Rinor IP Address</string>
    <string name="OPTION_server_IP_Title">SET IP or Address</string>
    <string name="OPTION_server_PORT">Domogik Rinor Port</string>
    <string name="OPTION_server_PORT_Title">Type port of domogik</string>
    <string name="OPTION_server_Path">Access path</string>
    <string name="OPTION_server_Path_Title">Type path of domogik</string>
    <string name="OPTION_server_http_user">Username</string>
    <string name="OPTION_server_http_user_Title">Type your username</string>
    <string name="OPTION_server_http_password">Http auth password</string>
    <string name="OPTION_server_http_password_Title">Type your http auth password</string>
    <string name="OPTION_butler_settings">Butler configuration</string>
    <string name="OPTION_butler_name">Butler name</string>
    <string name="OPTION_butler_name_desc">Set the Domogik Butler name</string>
    <string name="OPTION_your_name">Your name</string>
    <string name="OPTION_your_name_desc">Set your name</string>
    <string name="OPTION_butler_explain">This screen allow butler configuration</string>
    <string name="usage_settings">Widget configuration</string>
    <string name="usage_explain">This screen allow widget configuration</string>
    <string name="widget_choice">Alternative Widget:</string>
    <string name="graph_choice">Alternative Graph:</string>
    <string name="twocollandscapecheckbox">Nb of columns in landscape:</string>
    <string name="twocollandscape_1">1 column in landscape</string>
    <string name="twocollandscape_2">2 columns in Landscape</string>
    <string name="twocolportraitcheckbox">Nb of columns in portrait:</string>
    <string name="twocolportrait_1">1 column in portrait</string>
    <string name="twocolportrait_2">2 columns in portrait</string>
    <string name="UPDATE_TIMER">Update Timer if no events or mq</string>
    <string name="UPDATE_URL">Url used by update method</string>
    <string name="Rinor_URL">Url used by contact rest</string>
    <string name="MQ_address">MQ address</string>
    <string name="Mq_sub_port">MQ sub port</string>
    <string name="Mq_pub_port">MQ pub port</string>
    <string name="usage_byusagecheckbox">Force by usage for 0.3:</string>
    <string name="usage_byusage">Usage organisation</string>
    <string name="usage_byhouse">House organisation</string>
    <string name="house_settings">House configuration</string>
    <string name="house_explain">This screen allow house configuration</string>
    <string name="map_option_start">Start directly on Map view</string>
    <string name="map_option_start_on">Domodroid start in map mode</string>
    <string name="map_option_start_off">Domodroid start in house mode</string>
    <string name="butler">butler</string>
    <string name="Graph_achartengine">AChartengine Graph</string>
    <string name="Graph_normal">Normal Graph</string>
    <string name="widgets_alternative">Alternative on/off</string>
    <string name="widget_normal">Normal on/off</string>
    <string name="OPTION_Device_sync_organization">Default device sync organization</string>
    <string name="OPTION_only_0_4_more">For 0.4 and more</string>
    <string name="soon">Soon......</string>
    <string name="option_graph_height">Size of the graph (min>260)</string>
</resources>