<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppBaseTheme"
    android:title="Preferences"
    tools:context="activities.Activity_Main">
    <PreferenceCategory
        android:icon="@drawable/ic_map_black_24dp"
        android:persistent="false"
        android:title="@string/map_explain">
        <Preference
            android:enabled="false"
            android:icon="@drawable/ic_map_black_24dp"
            android:selectable="false"
            android:shouldDisableView="false"
            android:summary="@string/map_explain" />
        <!--
        Todo disable until map drag and zoom solved
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="DRAG"
                    android:summaryOff="@string/map_option_drag_off"
                    android:summaryOn="@string/map_option_drag_on"
                    android:title="@string/map_option_drag" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="ZOOM"
                    android:summaryOff="@string/map_option_zoom_off"
                    android:summaryOn="@string/map_option_zoom_on"
                    android:title="@string/map_option_zoom" />
        -->
        <CheckBoxPreference
            android:key="START_ON_MAP"
            android:summaryOff="@string/map_option_start_off"
            android:summaryOn="@string/map_option_start_on"
            android:title="@string/map_option_start" />
        <CheckBoxPreference
            android:key="HIDE"
            android:summaryOff="@string/map_option_hide_off"
            android:summaryOn="@string/map_option_hide_on"
            android:title="@string/map_option_hide" />
        <CheckBoxPreference
            android:icon="@drawable/ic_phonelink_lock_black_24dp"
            android:key="map_menu_disable"
            android:summaryOff="@string/map_option_menu_disable_off"
            android:summaryOn="@string/map_option_menu_disable_on"
            android:title="@string/map_option_menu_disable" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_zoom_out_map_black_24dp"
            android:key="map_autozoom"
            android:summaryOff="@string/map_autozoom_off"
            android:summaryOn="@string/map_autozoom_on"
            android:title="@string/map_autozoom" />
        <Preference
            android:defaultValue="800"
            android:key="SIZE"
            android:title="@string/map_option_size" />
    </PreferenceCategory>
</PreferenceScreen>