<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppBaseTheme"
    android:title="Preferences"
    tools:context="activities.Activity_Main">

    <Preference
        android:icon="@drawable/ic_settings_applications_black_24dp"
        android:persistent="false"
        android:title="@string/OPTION_server_settings">
        <intent
            android:targetPackage="org.domogik.domodroid13"
            android:targetClass="activities.Preference"
            android:action="preferences_server" />
    </Preference>

    <Preference
        android:icon="@drawable/ic_widgets_black_24dp"
        android:persistent="false"
        android:title="@string/usage_settings">
        <intent
            android:targetPackage="org.domogik.domodroid13"
            android:targetClass="activities.Preference"
            android:action="preferences_widget" />
    </Preference>

    <Preference
        android:icon="@drawable/ic_map_black_24dp"
        android:persistent="false"
        android:title="@string/map_settings">
        <intent
            android:targetPackage="org.domogik.domodroid13"
            android:targetClass="activities.Preference"
            android:action="preferences_map" />
    </Preference>

    <Preference
        android:icon="@drawable/ic_home_black_24dp"
        android:persistent="false"
        android:summary="@string/soon"
        android:title="@string/house_settings">
        <intent
            android:targetPackage="org.domogik.domodroid13"
            android:targetClass="activities.Preference"
            android:action="preferences_house" />
    </Preference>

    <Preference
        android:icon="@drawable/ic_forum_black_24dp"
        android:persistent="false"
        android:title="@string/OPTION_butler_settings">
        <intent
            android:targetPackage="org.domogik.domodroid13"
            android:targetClass="activities.Preference"
            android:action="preferences_butler" />
    </Preference>

    <Preference
        android:icon="@drawable/ic_bug_report_black_24dp"
        android:persistent="false"
        android:title="@string/debug_settings">
        <intent
            android:targetPackage="org.domogik.domodroid13"
            android:targetClass="activities.Preference"
            android:action="preferences_debug" />
    </Preference>

</PreferenceScreen>