<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="25dp"
	android:orientation="horizontal">

    <Button
        android:id="@+id/bt_prev"
        android:tag="Prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_prev"
        android:textSize="6sp"
		android:layout_weight="0.1" />

	<Button
	    android:id="@+id/bt_next"
	    android:tag="Next"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/bt_next"
	    android:textSize="6sp"
		android:layout_weight="0.1" />

	<Button
	    android:id="@+id/bt_year"
	    android:tag="Year"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:text="@string/bt_year"
	    android:textSize="6sp"
		android:layout_weight="0.1" />

	<Button
        android:id="@+id/bt_month"
        android:tag="Month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:text="@string/bt_month"
        android:textSize="6sp"
		android:layout_weight="0.1" />

	<Button
	    android:id="@+id/bt_week"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:tag="Week"
	    android:text="@string/bt_week"
	    android:textSize="6sp"
		android:layout_weight="0.1" />

	<Button
        android:id="@+id/bt_day"
        android:tag="Day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:text="@string/bt_day"
        android:textSize="6sp"
		android:layout_weight="0.1" />

	<EditText
	    android:id="@+id/period"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:gravity="center"
	    android:textSize="6sp"
		android:inputType="text"
		android:layout_weight="0.05">

	</EditText>

</LinearLayout>